--- a/index.html
+++ b/index.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css" />
+    <script src="index.js"></script>
     <title>Click square change color background</title>
-</head>
-<body>
+  </head>
+  <body >
     <div class="container">
-        <div class="square1"></div>
-        <div class="square2"></div>
-        <div class="square3"></div>
-        <div class="square4"></div>
-        <div class="square5"></div>
-        <div class="square6"></div>
+      <div class="row1">
+        <div id="square1" onclick="clickChangeColor('square1')"></div>
+        <div id="square2" onclick="clickChangeColor('square2')"></div>
+        <div id="square3" onclick="clickChangeColor('square3')"></div>
+      </div>
+      <div class="row2">
+        <div id="square4" onclick="clickChangeColor('square4')"></div>
+        <div id="square5" onclick="clickChangeColor('square5')"></div>
+        <div id="square6" onclick="clickChangeColor('square6')"></div>
+      </div>
+      <div id="colorName" onclick="changeBackToWhite()"></div>
     </div>
-</body>
+  </body>
 </html>
